# HW_WEB_05

./: Part1.py  pyproject.toml
