[tool.poetry]
name = "hw-web-05"
version = "0.1.0"
description = ""
authors = ["ArtemZhuravlev <Utah954@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.26.0"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
